--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+*~
+*.jar
+!lib/*
+bin
+.settings
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -45,3 +51,10 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
